# takapedia-rust

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  pull_request_template.md  task.md
common-lib/: Cargo.toml
notification-service/: Cargo.toml
payment-service/: Cargo.toml
payment-service/src/: main.rs
