[package]
name = "payment-service"
version = "1.0.0"
edition = "2024"

[dependencies]
common-lib = "1.0.0"
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = "0.10.1"
axum-test = "17.3.0"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
serde_json = "1.0.142"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }