[package]
name = "payment-service"
version = "1.0.0"
edition = "2024"

[dependencies]
common-lib = "1.0.0"
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = "0.10.1"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# ORM & Database
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }

# Env loader
dotenvy = "0.15"

# HTTP client untuk Payment Gateway
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# UUID untuk ID transaksi
uuid = { version = "1.8", features = ["v4"] }

# Kafka client
#rdkafka = { version = "0.36", features = ["tokio"] }

[dev-dependencies]
axum-test = "17.3.0"